--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Andrey-Mikhailov-Fro/frontend-project-12#readme",
   "dependencies": {
     "@hexlet/chat-server": "^2.0.3",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "socket.io": "^4.7.5"
   }
 }
