--- a/my-frontend-app/package.json
+++ b/my-frontend-app/package.json
@@ -11,12 +11,16 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "i18next": "^23.11.5",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
