--- a/my-frontend-app/package.json
+++ b/my-frontend-app/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5001",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@rollbar/react": "^0.12.0-beta",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "i18next": "^23.11.5",
+    "leo-profanity": "^1.7.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
+    "rollbar": "^2.26.4",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
