--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   },
   "homepage": "https://github.com/Andrey-Mikhailov-Fro/frontend-project-12#readme",
   "dependencies": {
-    "@hexlet/chat-server": "^2.0.3",
-    "bootstrap": "^5.3.3",
-    "socket.io": "^4.7.5"
+    "@hexlet/chat-server": "^2.0.3"
   }
 }
