--- a/my-frontend-app/.eslintrc.json
+++ b/my-frontend-app/.eslintrc.json
@@ -9,5 +9,6 @@
         "sourceType": "module"
     },
     "rules": {
+        "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
     }
 }
